--- a/index.html
+++ b/index.html
@@ -13,33 +13,40 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <!-- Folha de estilo -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <!-- Cabeçalho -->
-    <Header>
-        <img src="./img/img.jpg" alt="Mauricio Sena">
-    </Header>
+    <!-- Container para o CSS flex -->
+    <div class="container">
 
-    <!-- Principal -->
-    <main>
-        <h1>Mauricio Afonso Sena Silva</h1>
-        <p>Estudante de TI, Trabalhador de Infraestrutura e focado em empresas de grande e médio porte.</p>
-    </main>
-    <!-- Links -->
-    <div id="links">
-        <a href="https://www.linkedin.com/in/mauricio-afonso-bb3aa0212/">Linkedin</a>
-        <a href="https://www.youtube.com/@maumau7629/featured">Youtube</a>
-        <a href="https://www.instagram.com/mauh_mauh01/">Instagram</a>
-        <a href="https://github.com/Mauri902">Portifólio</a>
+        <!-- Cabeçalho -->
+        <Header>
+            <img src="./img/img.jpg" alt="Mauricio Sena">
+        </Header>
+
+        <!-- Principal -->
+        <main>
+            <h1>Mauricio Afonso Sena Silva</h1>
+            <p>Estudante de TI, Trabalhador de Infraestrutura e focado em empresas de grande e médio porte.</p>
+        </main>
+        <!-- Links -->
+        <div id="links">
+            <a href="https://www.linkedin.com/in/mauricio-afonso-bb3aa0212/">Linkedin</a>
+            <a href="https://www.youtube.com/@maumau7629/featured">Youtube</a>
+            <a href="https://www.instagram.com/mauh_mauh01/">Instagram</a>
+            <a href="https://github.com/Mauri902">Portifólio</a>
+        </div>
+        <!-- Rodapé -->
+        <Footer>
+            <a href="https://www.linkedin.com/in/mauricio-afonso-bb3aa0212/"><img src="./img/linkedin.png"
+                    alt="Linkedin"></a>
+            <a href="https://github.com/Mauri902/html-css"><img src="./img/github.png" alt="GitHub"></a>
+            <a href="https://www.youtube.com/@maumau7629/featured"><img src="./img/Youtube.png" alt="Youtube"></a>
+            <a href="https://www.instagram.com/mauh_mauh01/"><img src="./img/insta.png" alt="Instagram"></a>
+        </Footer>
     </div>
-    <!-- Rodapé -->
-    <Footer>
-        <a href="https://www.linkedin.com/in/mauricio-afonso-bb3aa0212/"><img src="./img/linkedin.png" alt="Linkedin"></a>
-        <a href="https://github.com/Mauri902/html-css"><img src="./img/github.png" alt="GitHub"></a>
-        <a href="https://www.youtube.com/@maumau7629/featured"><img src="./img/Youtube.png" alt="Youtube"></a>
-        <a href="https://www.instagram.com/mauh_mauh01/"><img src="./img/insta.png" alt="Instagram"></a>
-    </Footer> 
 </body>
 
 </html>
