Finalização do projeto

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <!-- Principal -->
         <main>
             <h1>Mauricio Afonso Sena Silva</h1>
-            <p>Estudante de TI, Trabalhador de Infraestrutura e focado em empresas de grande e médio porte.</p>
+            <p>Estudante de TI, profissional de Infraestrutura.</p>
         </main>
         <!-- Links -->
-        <div id="links">
+        <div class="container">
             <a href="https://www.linkedin.com/in/mauricio-afonso-bb3aa0212/">Linkedin</a>
             <a href="https://www.youtube.com/@maumau7629/featured">Youtube</a>
             <a href="https://www.instagram.com/mauh_mauh01/">Instagram</a>
