Finalização do projeto

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <a href="https://www.linkedin.com/in/mauricio-afonso-bb3aa0212/">Linkedin</a>
             <a href="https://www.youtube.com/@maumau7629/featured">Youtube</a>
             <a href="https://www.instagram.com/mauh_mauh01/">Instagram</a>
-            <a href="https://github.com/Mauri902">Portifólio</a>
+            <!-- Whatsapp API-->
+            <a href="https://api.whatsapp.com/send?phone=5511123456789">Whatsapp</a>
         </div>
         <!-- Rodapé -->
         <Footer>
