Finalização do projeto

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
         <!-- Links -->
         <div class="container">
             <a href="https://www.linkedin.com/in/mauricio-afonso-bb3aa0212/">Linkedin</a>
-            <a href="https://www.youtube.com/@maumau7629/featured">Youtube</a>
+            <!-- E-mail -->
+            <a href="mailto:mauhmauh0123@gmail.com?subjet=Contato Instagram">E-mail</a>
             <a href="https://www.instagram.com/mauh_mauh01/">Instagram</a>
             <!-- Whatsapp API-->
-            <a href="https://api.whatsapp.com/send?phone=5511958588256">Whatsapp</a>
+            <a href="https://api.whatsapp.com/send?phone=5511123456789">Whatsapp</a>
         </div>
         <!-- Rodapé -->
         <Footer>
