Finalização do projeto

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <!-- Principal -->
         <main>
-            <h1>Mauricio Afonso Sena Silva</h1>
+            <h1>Mauricio Sena</h1>
             <p>Estudante de TI, profissional de Infraestrutura.</p>
         </main>
         <!-- Links -->
@@ -36,7 +36,7 @@
             <a href="https://www.linkedin.com/in/mauricio-afonso-bb3aa0212/">Linkedin</a>
             <!-- E-mail -->
             <a href="mailto:mauhmauh0123@gmail.com?subjet=Contato Instagram">E-mail</a>
-            <a href="https://www.instagram.com/mauh_mauh01/">Instagram</a>
+            <a href="./Curriculo.pdf">Curriculo</a>
             <!-- Whatsapp API-->
             <a href="https://api.whatsapp.com/send?phone=5511123456789">Whatsapp</a>
         </div>
